deployments/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - command:
            - /server
          image: server:latest
          name: server
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
              name: http
