deployments/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
    - targetPort: http
      port: 8080
  selector:
    app: server
